--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -14,6 +14,10 @@
   border: 0;
 }
 
+.input:focus {
+  outline: none;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
 }
@@ -56,12 +60,12 @@ body {
 .cloud .cloud-icon {
   opacity: 0.8;
   padding: 1px;
-  padding-right: 10px;
+  padding-right: 15px;
 }
 
 .weather-info .precip {
   padding-top: 10px;
-  width: 250px;
+  width: 220px;
   border-top: 2px solid #d1d5db;
   font-size: larger;
 }
@@ -69,4 +73,16 @@ body {
 .weather-info .wind {
   font-size: larger;
   padding-bottom: 20px;
+}
+
+.nodata {
+  font-size: 40px;
+  padding-top: 40px;
+  color: #fecaca;
+}
+
+.error-icon {
+  padding-top: 10px;
+  font-size: 100px;
+  opacity: 0.5;
 }
