--- a/src/components/style/style.css
+++ b/src/components/style/style.css
@@ -70,6 +70,8 @@ body {
 
 .weather-info .date {
   margin-top: -8px;
+  font-family: sans-serif;
+  padding-left: 0.2rem;
 }
 
 .weather-info .temp {
